--- a/jair.bib
+++ b/jair.bib
@@ -600,3 +600,49 @@
   year={2008},
   organization={Association for Computational Linguistics}
 }
+
+@book{multilingualBook,
+	author = {Peters, Carol. and Braschler, Martin. and SpringerLink (Online service)},
+	title = {Multilingual Information Retrieval},
+	publisher = {Springer Berlin Heidelberg,},
+	year = {2012.},
+	address = {Berlin, Heidelberg :},
+	url = {http://dx.doi.org/10.1007/978-3-642-23008-0}
+}
+
+@article{plagiarism,
+ author = {Potthast, Martin and Barr\'{o}n-Cede\~{n}o, Alberto and Stein, Benno and Rosso, Paolo},
+ title = {Cross-language Plagiarism Detection},
+ journal = {Lang. Resour. Eval.},
+ issue_date = {March     2011},
+ volume = {45},
+ number = {1},
+ month = mar,
+ year = {2011},
+ issn = {1574-020X},
+ pages = {45--62},
+ numpages = {18},
+ url = {http://dx.doi.org/10.1007/s10579-009-9114-z},
+ doi = {10.1007/s10579-009-9114-z},
+ acmid = {1961139},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+ keywords = {Cross-language, Evaluation, Plagiarism detection, Retrieval model, Similarity},
+}
+
+@inproceedings{ESA,
+  author    = {Martin Potthast and
+               Benno Stein and
+               Maik Anderka},
+  title     = {A Wikipedia-Based Multilingual Retrieval Model},
+  booktitle = {Advances in Information Retrieval , 30th European Conference on {IR}
+               Research, {ECIR} 2008, Glasgow, UK, March 30-April 3, 2008. Proceedings},
+  pages     = {522--530},
+  year      = {2008},
+  crossref  = {DBLP:conf/ecir/2008},
+  url       = {http://dx.doi.org/10.1007/978-3-540-78646-7_51},
+  doi       = {10.1007/978-3-540-78646-7_51},
+  timestamp = {Mon, 14 Apr 2008 15:22:16 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ecir/PotthastSA08},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
