Updated pipeline figure to vector format.

--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -144,7 +144,7 @@ We base our techniques of cross-lingual event linking on an online system for de
 
 \begin{figure}[tbp]
 \centering
-\includegraphics[width=\textwidth]{pipeline}
+\includegraphics[width=\textwidth]{pipeline.pdf}
 \caption{\label{fig:erpipeline}  The Event Registry pipeline. After new articles are collected, they are first analyzed individually (Article-level processing). In the next step, groups of articles about the same event are identified and relevant information about the event is extracted (Event construction phase). Although the pipeline contains several components, we focus only on the two highlighted in the image.}
 \end{figure}
 
